--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -20,7 +20,10 @@ jobs:
           npm run build
   
   test:
-    runs-on: ubuntu-latest
+      - uses: actions/upload-artifact@master
+        with:
+          name: webpack artifacts
+          path: public/
     strategy:
       matrix:
         node-version: [12.x, 14.x]
